implemented a good chunk of The Man I just need to do the hair part and we're good!

--- a/wmpplugin1/wmpplugin1.rc
+++ b/wmpplugin1/wmpplugin1.rc
@@ -107,6 +107,7 @@ BEGIN
     IDS_NAME_THEWAVE        "The Wave"
     IDS_DESCRIPTION         "I can't believe it's going to work the first time!"
     IDS_NAME_SQUARES        "Squares"
+    IDS_NAME_THEMAN         "The Man"
 END
 
 #endif    // English (U.S.) resources
