implemented Wave Spectrum

--- a/wmpplugin1/wmpplugin1.rc
+++ b/wmpplugin1/wmpplugin1.rc
@@ -125,6 +125,7 @@ END
 STRINGTABLE 
 BEGIN
     IDS_NAME_CREVICE        "Crevice"
+    IDS_NAME_WAVESPECTRUM   "Wave Spectrum"
 END
 
 #endif    // English (U.S.) resources
