--- a/wmpplugin1/wmpplugin1.vcproj
+++ b/wmpplugin1/wmpplugin1.vcproj
@@ -423,6 +423,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\VizWaveSpectrum.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\VizWormhole.cpp"
 				>
 			</File>
@@ -506,6 +510,10 @@
 			</File>
 			<File
 				RelativePath=".\VizWaveHoles.h"
+				>
+			</File>
+			<File
+				RelativePath=".\VizWaveSpectrum.h"
 				>
 			</File>
 			<File
