implemented Ripples and fixed a small bug in Wave Holes and Plane

--- a/wmpplugin1/wmpplugin1.rc
+++ b/wmpplugin1/wmpplugin1.rc
@@ -132,6 +132,7 @@ BEGIN
     IDS_NAME_PODS           "Pods"
     IDS_NAME_ELECTRODE      "Electrode"
     IDS_NAME_WORM           "Worm"
+    IDS_NAME_RIPPLES        "Ripples"
 END
 
 #endif    // English (U.S.) resources
